--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -110,14 +110,14 @@
                         style="@string/font_normal" />
 
                     <EditText
-                        android:id="@+id/village_spinner"
+                        android:id="@+id/text_to_translate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:gravity="center"
+                        android:gravity="left"
                         android:background="@android:color/transparent"/>
 
                 </RelativeLayout>
@@ -154,9 +154,8 @@
                         android:layout_alignParentStart="true"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="15dp"
-                        android:textColor="@android:color/white"
+                        android:textColor="@android:color/black"
                         android:textSize="@dimen/_15sdp"
-                        android:visibility="visible"
                         style="@string/font_normal" />
 
 
@@ -165,19 +164,6 @@
             </RelativeLayout>
 
         </androidx.core.widget.NestedScrollView>
-
-        <TextView
-            android:id="@+id/save"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_alignParentBottom="true"
-            android:padding="15dp"
-            android:text="Sofware Designed &amp; Developed by NIC"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/_14sdp"
-            android:background="@drawable/background"
-            style="@string/font_circular_medium" />
 
     </RelativeLayout>
 </layout>
