--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -86,39 +86,52 @@
                     style="@string/font_circular_bold" />
 
                 <RelativeLayout
-                    android:id="@+id/village_layout"
+                    android:id="@+id/before_translate_layout"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/header"
                     android:layout_below="@+id/translate_title"
                     android:layout_marginLeft="@dimen/margin_left_20dp"
-                    android:layout_marginTop="@dimen/padding"
+                    android:layout_marginTop="17dp"
                     android:layout_marginRight="@dimen/margin_left_20dp"
                     android:background="@drawable/rectangle_box"
                     android:orientation="vertical">
 
                     <TextView
 
+                        style="@string/font_normal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentStart="true"
                         android:layout_centerInParent="true"
-                        android:layout_marginLeft="15dp"
 
+                        android:layout_marginLeft="15dp"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/_15sdp"
-                        android:visibility="visible"
-                        style="@string/font_normal" />
+                        android:visibility="visible" />
 
                     <EditText
                         android:id="@+id/text_to_translate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:gravity="left"
-                        android:background="@android:color/transparent"/>
+                        android:layout_toLeftOf="@+id/close"
+                        android:background="@android:color/transparent"
+                        android:gravity="left" />
+
+                    <ImageView
+                        android:id="@+id/close"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="15dp"
+                        android:adjustViewBounds="true"
+                        android:onClick="@{()-> activity.empty()}"
+                        android:scaleType="centerInside"
+                        android:src="@mipmap/close_icon" />
 
                 </RelativeLayout>
 
@@ -127,7 +140,7 @@
                     android:id="@+id/after_translate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/village_layout"
+                    android:layout_below="@+id/before_translate_layout"
                     android:layout_marginLeft="@dimen/margin_left_20dp"
                     android:layout_marginTop="@dimen/padding"
                     android:layout_marginRight="@dimen/margin_left_20dp"
@@ -137,7 +150,7 @@
                     style="@string/font_circular_bold" />
 
                 <RelativeLayout
-                    android:id="@+id/hab_layout"
+                    android:id="@+id/after_translate_layout"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/header"
                     android:layout_below="@+id/after_translate"
