--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,220 +9,236 @@
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_circle">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@color/colorPrimary"
-                android:gravity="center"
-                android:orientation="vertical">
-
+            <FrameLayout
+                android:id="@+id/fm1"
+                    android:layout_width="match_parent"
+                android:layout_height="150dp">
 
                 <TextView
                     android:id="@+id/tvtitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/_40sdp"
-                    android:text="Login"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_30sdp"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:layout_marginBottom="30dp"
+                    android:text="VP Tax"
+                    android:textAlignment="center"
+                    android:textColor="#FFFFFF"
+                    android:textSize="40sp"
                     android:textStyle="bold" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_60sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:orientation="horizontal">
+            </FrameLayout>
 
-                    <LinearLayout
-                        android:layout_width="@dimen/_60sdp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/background_text_email"
-                        android:gravity="center">
+            <FrameLayout
+                android:id="@+id/fm2"
+                android:layout_width="50dp"
+                android:layout_height="100dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true">
 
-                        <ImageView
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_25sdp"
-                            android:background="@drawable/ic_mail_outline_black_24dp"
-                            android:scaleType="centerCrop" />
+            </FrameLayout>
 
-                    </LinearLayout>
+            <FrameLayout
+                android:id="@+id/fm3"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                android:layout_alignParentBottom="true">
 
-                        <EditText
-                            android:id="@+id/userName"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/background_edittext"
-                            android:hint="User Name"
-                            android:inputType="textEmailAddress"
-                            android:paddingLeft="@dimen/_10sdp"
-                            android:textSize="@dimen/_15sdp" />
-                    </LinearLayout>
-                </LinearLayout>
+            </FrameLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:orientation="horizontal">
+            <RelativeLayout
+                android:id="@+id/user_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/fm1"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="@dimen/_50sdp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/background_gradient2">
 
-                    <LinearLayout
-                        android:layout_width="@dimen/_60sdp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/background_text_email"
-                        android:gravity="center">
-
-                        <ImageView
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_25sdp"
-                            android:background="@drawable/ic_lock_outline_black_24dp"
-                            android:scaleType="centerCrop" />
-
-                    </LinearLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/background_edittext"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/password"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@android:color/transparent"
-                            android:layout_toLeftOf="@+id/red_eye"
-                            android:hint="Password"
-                            android:inputType="textPassword"
-                            android:padding="@dimen/_10sdp"
-                            android:textSize="@dimen/_15sdp" />
-
-                        <ImageView
-                            android:id="@+id/red_eye"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-
-                            android:layout_alignParentEnd="true"
-                            android:layout_margin="@dimen/_5sdp"
-
-                            android:background="@drawable/ic_baseline_visibility_24px"
-                            android:onClick="@{()-> activity.showPassword()}" />
-
-                    </RelativeLayout>
-
-                </LinearLayout>
-
-                <!-- Login Button -->
-
-                <LinearLayout
-                    android:id="@+id/btn_signin"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginTop="30dip"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:background="@drawable/ic_launcher_background_login"
-                    android:gravity="center"
-                    android:onClick="@{()-> activity.checkLoginScreen()}">
-
-                    <ImageView
-                        android:layout_width="@dimen/_25sdp"
-                        android:layout_height="@dimen/_25sdp"
-                        android:background="@drawable/log_in" />
-                </LinearLayout>
-
-                <!-- Link to Login Screen -->
-
-                <RelativeLayout
-                    android:id="@+id/lnreg"
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/StyledTextInputEditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:layout_marginBottom="@dimen/_10sdp"
-                    android:gravity="center_horizontal"
-                    android:onClick="@{()-> activity.checkLoginScreen()}"
-                    android:orientation="horizontal">
+                    android:layout_toLeftOf="@+id/user_img"
+                    android:textColor="@android:color/black">
 
-
-                    <TextView
-                        android:id="@+id/signin"
-                        android:layout_width="wrap_content"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/username"
+                        style="@style/font_poppins_semibold"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="Sign in"
-                        android:textAllCaps="false"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/_12sdp"
-                        android:textStyle="bold" />
+                        android:layout_marginLeft="@dimen/_20sdp"
+                        android:background="@android:color/transparent"
+                        android:gravity="left"
+                        android:hint="User Name"
+                        android:inputType="textAutoCorrect"
+                        android:maxLength="30"
+                        android:maxLines="1"
+                        android:paddingBottom="15dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp" />
 
-                </RelativeLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <LinearLayout
+                <EditText
+                    style="@style/font_poppins_semibold"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_50sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:gravity="center">
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:layout_toLeftOf="@+id/user_img"
+                    android:background="@android:color/transparent"
+                    android:hint="Username"
+                    android:inputType="textAutoCorrect"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:textAlignment="textStart"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:textSize="15sp"
+                    android:visibility="gone" />
 
-                    <ImageView
-                        android:layout_width="@dimen/_25sdp"
-                        android:layout_height="@dimen/_25sdp"
-                        android:background="@drawable/log_in"
-                        android:visibility="gone" />
-                </LinearLayout>
+                <ImageView
+                    android:id="@+id/user_img"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:background="@drawable/usernamebg" />
 
-                <LinearLayout
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/pass_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/user_layout"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/background_gradient2">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/StyledTextInputEditText"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_20sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:gravity="center">
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/red_eye"
+                    android:textColor="@android:color/black">
 
-                    <ImageView
-                        android:layout_width="@dimen/_25sdp"
-                        android:layout_height="@dimen/_25sdp"
-                        android:background="@drawable/log_in"
-                        android:visibility="gone" />
-                </LinearLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/password"
+                        style="@style/font_poppins_semibold"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="@dimen/_20sdp"
+                        android:background="@android:color/transparent"
+                        android:gravity="left"
+                        android:hint="Password"
+                        android:inputType="textAutoCorrect"
+                        android:maxLength="30"
+                        android:maxLines="1"
+                        android:paddingBottom="15dp"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp" />
 
-                <RelativeLayout
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <EditText
+                    style="@style/font_poppins_semibold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="@dimen/_20sdp"
+                    android:layout_toLeftOf="@+id/red_eye"
+                    android:background="@android:color/transparent"
+                    android:gravity="center"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:textAlignment="textStart"
+                    android:textCursorDrawable="@drawable/sky_blue_cursor_color"
+                    android:textSize="15sp"
+                    android:visibility="gone"
+                    tools:ignore="RtlCompat" />
+
+                <ImageView
+                    android:id="@+id/red_eye"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_12sdp">
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:background="@drawable/ic_baseline_visibility_24px"
+                    android:onClick="@{()-> activity.showPassword()}" />
 
-                    <TextView
-                        android:id="@+id/tv_version"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Version"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold" />
+            </RelativeLayout>
+
+
+            <Button
+                android:id="@+id/login"
+                style="@style/font_poppins_semibold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pass_layout"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/background_gradient"
+                android:onClick="@{()-> activity.checkLoginScreen()}"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:text="Login"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp" />
+
 
                 </RelativeLayout>
-            </LinearLayout>
 
-        </ScrollView>
 
+        <TextView
+            android:id="@+id/tv_version_number"
+            style="@style/font_poppins_regular"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="@dimen/_34sdp"
+            android:padding="@dimen/_13sdp"
+            android:text="adaadadadad"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_15sdp" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/font_poppins_regular"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:padding="@dimen/_13sdp"
+            android:text="Sofware Designed &amp; Developed by NIC"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_15sdp" />
 
     </RelativeLayout>
 </layout>
