--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -9,31 +9,53 @@
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        tools:context="com.nic.RealTimeMonitoringSystem.activity.SplashScreen">
+        android:layout_height="match_parent">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/ivSplash"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:background="@drawable/background"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/ivLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="100dp"
+            android:text="VPTAX"
+            android:textColor="#FFF"
+            android:textSize="44sp"
+              />
+
+
+        <TextView
+            android:id="@+id/ivSubtitle"
+            android:lineSpacingExtra="8dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="28dp"
             android:layout_centerInParent="true"
-            android:layout_centerHorizontal="true"
-          >
+            android:text="Try a new experience of Online Tax"
+            android:textColor="#FFF"
+            android:textSize="22sp"
+             />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/tn_logo" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/ivBtn"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="108dp"
+            android:layout_marginStart="36dp"
+            android:layout_alignParentBottom="true"
+            android:lineSpacingExtra="8dp"
+            android:text="Get Started"
+            android:textColor="#FFF"
+            android:textSize="24sp"
+             />
 
     </RelativeLayout>
 </layout>
