--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#008577</color>
-<color name="colorPrimaryDark">#00574B</color>
+<color name="colorPrimary">#6867E9</color>
+<color name="colorPrimaryDark">#6CBCE2</color>
 <color name="colorAccent">#D81B60</color>
 
 <color name="address">#2F7092</color>
