--- a/app/src/main/res/layout/app_update_dialog.xml
+++ b/app/src/main/res/layout/app_update_dialog.xml
@@ -53,7 +53,7 @@
             android:gravity="center"
             android:lineSpacingExtra="5dp"
             android:padding="@dimen/padding"
-            android:text="You need to update MI Tank"
+            android:text="You need to update VP TAX"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             style="@string/font_circular_medium" />
 
@@ -65,7 +65,7 @@
             android:gravity="center"
             android:lineSpacingExtra="5dp"
             android:padding="@dimen/padding"
-            android:text="This version of MI Tank is no longer supported. Please go to Official Site and install new version"
+            android:text="This version of VP TAX is no longer supported. Please go to Official Site and install new version"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             style="@string/font_normal" />
 
