--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,53 +8,93 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="5dp"
+        android:layout_margin="@dimen/_12sdp"
         android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/tv_message"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:padding="@dimen/padding"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            style="@style/font_circular_book" />
+
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/ivIlls"
+                android:layout_width="@dimen/_38sdp"
+                android:layout_height="@dimen/_38sdp"
+                android:layout_centerHorizontal="true"
+
+                android:layout_gravity="center"
+
+                android:src="@mipmap/tamilnadu_logo" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAlignment="viewStart"
+                android:layout_marginLeft="@dimen/_2sdp"
+                android:gravity="start"
+                android:padding="@dimen/_5sdp"
+                android:text="@string/app_name"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:textColor="@color/black"
+                style="@style/font_circular_book" />
+        </LinearLayout>
+
+
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_margin="5dp"
-            android:background="#CCC" />
+            android:background="#CCC"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:gravity="start"
+            android:padding="@dimen/_6sdp"
+            android:text="@string/app_name"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+            android:textColor="@color/black"
+            style="@style/font_circular_book" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_cancel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5sdp"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:text="CANCEL"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/black"
                 android:textSize="@dimen/menu_title_size"
                 android:visibility="gone" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_ok"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_5sdp"
+
                 android:layout_weight="1"
-                android:background="@android:color/transparent"
+                android:background="@drawable/background_gradient"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:text="OK"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/black"
                 android:textSize="@dimen/menu_title_size" />
         </LinearLayout>
 
     </LinearLayout>
 
-</RelativeLayout>
+
+
+
+</androidx.cardview.widget.CardView>
