--- a/app/src/main/res/values-v28/styles.xml
+++ b/app/src/main/res/values-v28/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- Base PMAYSurveyapplication theme. -->
+    <!-- Base application theme. -->
     <style name="UIChangeAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <item name="colorPrimary">@color/colorPrimary</item>
