--- a/app/src/main/res/drawable/rectangle_box.xml
+++ b/app/src/main/res/drawable/rectangle_box.xml
@@ -3,11 +3,11 @@
     android:color="@color/colorAccent">
     <item>
 <shape >
-    <solid android:color="#F5F5F5" />
-    <corners android:radius="10dp" />
+    <solid android:color="@color/white" />
+    <corners android:radius="3dp" />
     <stroke
         android:width="1dip"
-        android:color="@color/colorPrimary" />
+        android:color="@android:color/darker_gray" />
     <padding
         android:bottom="0dip"
         android:left="0dip"
