--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -36,7 +36,7 @@
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                 android:textColor="@color/black"
-                style="@style/font_circular_book" />
+                  />
         </LinearLayout>
 
 
@@ -57,8 +57,7 @@
             android:padding="@dimen/_6sdp"
             android:text="@string/app_name"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
-            android:textColor="@color/black"
-            style="@style/font_circular_book" />
+            android:textColor="@color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
