--- a/app/src/main/res/layout/cat_bottomappbar_fragment.xml
+++ b/app/src/main/res/layout/cat_bottomappbar_fragment.xml
@@ -17,43 +17,31 @@
         >
 
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:backgroundTint="@color/colorPrimary"
-            app:fabAnimationMode="scale"
-             app:fabAlignmentMode="end"
-            app:fabCradleMargin="@dimen/_10sdp"
-app:fabCradleRoundedCornerRadius="@dimen/_15sdp"
-            app:hideOnScroll="true"
-            app:fabCradleVerticalOffset="@dimen/_10sdp"
-               />
+<!--        <com.google.android.material.bottomappbar.BottomAppBar-->
+<!--            android:id="@+id/bar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="bottom"-->
+<!--            app:backgroundTint="@color/colorPrimary"-->
+<!--            app:fabAnimationMode="scale"-->
+<!--             app:fabAlignmentMode="end"-->
+<!--            app:fabCradleMargin="@dimen/_10sdp"-->
+<!--app:fabCradleRoundedCornerRadius="@dimen/_15sdp"-->
+<!--            app:hideOnScroll="true"-->
+<!--            app:fabCradleVerticalOffset="@dimen/_10sdp"-->
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity=""
             app:maxImageSize="@dimen/_25sdp"
             app:layout_anchor="@id/bar"
 
             app:srcCompat="@drawable/ic_add_24px" />
 
-        <!--    <FrameLayout-->
-        <!--        android:id="@+id/bottom_drawer"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        android:elevation="16dp"-->
-        <!--        app:behavior_hideable="true"-->
-        <!--        app:layout_behavior="@string/bottom_sheet_behavior">-->
 
-        <!--        <com.google.android.material.navigation.NavigationView-->
-        <!--            android:id="@+id/navigation_view"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--             />-->
-        <!--    </FrameLayout>-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
