--- a/app/src/main/res/layout/existing_trade_licence.xml
+++ b/app/src/main/res/layout/existing_trade_licence.xml
@@ -335,7 +335,7 @@
                                 android:hint="Ward Id">
 
                                 <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/door_no"
+                                    android:id="@+id/ward_id"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:inputType="textPersonName" />
@@ -406,7 +406,7 @@
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:text="Submit"
-                        android:onClick="@{()-> activity.existTradeLicenceSubmit()}"
+                        android:onClick="@{()-> activity.validateDetails()}"
                         android:textAllCaps="false"
                         android:textColor="@android:color/black"
                         android:textSize="@dimen/_15sdp" />
