--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -220,7 +220,7 @@
                             customfontdemo:fontName="@string/font_circular_medium" />
 
                         <RelativeLayout
-                            android:id="@+id/dob_layout"
+                            android:id="@+id/date_layout"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/header"
                             android:layout_marginLeft="@dimen/margin_left_20dp"
@@ -232,7 +232,7 @@
 
 
                             <TextView
-                                android:id="@+id/motivator_dob_tv"
+                                android:id="@+id/date"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
@@ -376,7 +376,7 @@
                                 android:hint="Trade Description">
 
                                 <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/username"
+                                    android:id="@+id/trade_description"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:inputType="textPersonName" />
@@ -849,7 +849,7 @@
                                 customfontdemo:fontName="@string/font_circular_book" />
 
                             <Spinner
-                                android:id="@+id/ward"
+                                android:id="@+id/ward_no"
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
@@ -900,7 +900,7 @@
                                 android:hint="Street Name">
 
                                 <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/address"
+                                    android:id="@+id/street_name"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:gravity="top|left"
@@ -1115,7 +1115,7 @@
 
 
                             <CheckBox
-                                android:id="@+id/alive_yes"
+                                android:id="@+id/is_paid"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
@@ -1152,6 +1152,7 @@
                                 android:checked="false"
                                 android:gravity="center"
                                 android:text="Street"
+                                android:onClick="@{()-> activity.signUP()}"
                                 android:textColor="@android:color/black"
                                 android:textSize="13sp" />
 
@@ -1172,6 +1173,7 @@
                         android:layout_gravity="bottom|end"
                         android:layout_margin="@dimen/fab_margin"
                         app:backgroundTint="@color/colorPrimary"
+                        android:onClick="@{()-> activity.openCameraScreen()}"
                         app:srcCompat="@drawable/camera_icon" />
 
                     <androidx.appcompat.widget.AppCompatButton
