--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -195,7 +195,9 @@
                                     android:id="@+id/traders_code"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:inputType="textPersonName" />
+                                    android:inputType="textPersonName"
+                                    android:imeOptions="actionNext"
+                                    android:nextFocusDown="@id/trade_description"/>
 
                             </com.google.android.material.textfield.TextInputLayout>
 
