--- a/app/src/main/res/layout/assessment_status.xml
+++ b/app/src/main/res/layout/assessment_status.xml
@@ -290,7 +290,7 @@
                             android:visibility="visible">
 
                             <TextView
-                                android:id="@+id/traders_details_tv"
+                                android:id="@+id/applicant_name_tv"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
@@ -339,7 +339,7 @@
                             android:visibility="visible">
 
                             <TextView
-                                android:id="@+id/details"
+                                android:id="@+id/details_tv"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentStart="true"
