--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -3,15 +3,86 @@
     xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFF"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/cancel_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:minHeight="?actionBarSize">
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:contentInsetLeft="0dp"
+                app:contentInsetStart="0dp"
+                app:layout_scrollFlags="scroll|enterAlways|snap">
+
+                <RelativeLayout
+                    android:id="@+id/header_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:background="@drawable/header_login">
+
+
+                    <ImageView
+                        android:id="@+id/back_arrow"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="start"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/back"
+                        android:backgroundTint="@android:color/white"/>
+
+
+                    <TextView
+                        android:id="@+id/title_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:text="Field Visit"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/_15sdp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/home"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="15dp"
+                        android:adjustViewBounds="true"
+                        android:background="@drawable/ic_home_black_24dp"
+                        android:backgroundTint="@android:color/white"
+                        android:scaleType="centerInside" />
+
+
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/horizontal_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_below="@+id/header_layout"
+                    android:background="#FFF" />
+            </androidx.appcompat.widget.Toolbar>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
 
 
 
@@ -63,7 +134,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_add"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
@@ -72,7 +143,10 @@
                 android:background="@drawable/click_here"
                 android:text="Add Photo"
                 android:textAllCaps="false"
-                android:textColor="@android:color/white" />
+                android:textStyle="bold"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground"
+                android:textColor="@android:color/black" />
 
 
             <RelativeLayout
@@ -81,7 +155,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 >
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_save_inspection"
                     android:layout_width="150dp"
                     android:layout_height="40dp"
@@ -89,9 +163,12 @@
                     android:layout_centerInParent="true"
                     android:layout_margin="5dp"
                     android:background="@drawable/click_here"
-                    android:text="SAVE IMAGE LOCAL"
+                    android:text="Save Image"
                     android:textAllCaps="false"
-                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:textColor="@android:color/black"
                     />
             </RelativeLayout>
         </LinearLayout>
