--- a/app/src/main/res/layout/camera_screen.xml
+++ b/app/src/main/res/layout/camera_screen.xml
@@ -158,14 +158,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_save"
                 android:layout_width="150dp"
                 android:layout_height="40dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
                 android:onClick="@{()-> activity.saveImage()}"
-                android:background="@drawable/rectangle_box"
+                android:background="@drawable/click_here"
                 android:text="SAVE IMAGE"
                 android:textAllCaps="false"
                 android:textColor="@android:color/black" />
