--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -1178,23 +1178,31 @@
                         android:onClick="@{()-> activity.openCameraScreen()}"
                         app:srcCompat="@drawable/camera_icon" />
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/view_image"
+                    <LinearLayout
+                        android:id="@+id/take_pic_layout"
                         android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_40sdp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginLeft="@dimen/margin"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:layout_marginRight="@dimen/margin"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:background="@drawable/click_here"
-                        android:clickable="true"
-                        android:foreground="?attr/selectableItemBackground"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
                         android:onClick="@{()-> activity.viewImageScreen()}"
-                        android:text="View Image"
-                        android:textAllCaps="false"
-                        android:textColor="@android:color/black"
-                        android:textSize="@dimen/_15sdp" />
+                        android:layout_marginTop="@dimen/_25sdp"
+                        android:background="@drawable/white_background_left_two_corners"
+                        android:orientation="horizontal"
+                        android:padding="@dimen/_8sdp">
+
+                        <TextView
+                            android:id="@+id/take_photo_tv"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="left"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:text="View Image"
+                            android:textColor="@android:color/black"
+                            android:textSize="18sp"
+                            android:textStyle="normal"
+                            style="@string/font_normal" />
+
+                    </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_register"
@@ -1208,7 +1216,7 @@
                         android:background="@drawable/click_here"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
-                        android:onClick="@{()-> activity.signUP()}"
+                        android:onClick="@{()-> activity.validateUserDetails()}"
                         android:text="Submit"
                         android:textAllCaps="false"
                         android:textColor="@android:color/black"
