--- a/app/src/main/res/layout/exist_trade_submit.xml
+++ b/app/src/main/res/layout/exist_trade_submit.xml
@@ -554,8 +554,27 @@
                         android:layout_gravity="bottom|end"
                         android:layout_margin="@dimen/fab_margin"
                         app:backgroundTint="@color/colorPrimary"
-                        android:visibility="gone"
+                        android:onClick="@{()-> activity.openCameraScreen()}"
+                        android:visibility="visible"
                         app:srcCompat="@drawable/camera_icon" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/view_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/_40sdp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginLeft="@dimen/margin"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/margin"
+                        android:layout_marginBottom="@dimen/_10sdp"
+                        android:background="@drawable/click_here"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:onClick="@{()-> activity.viewImageScreen()}"
+                        android:text="View Image"
+                        android:textAllCaps="false"
+                        android:textColor="@android:color/black"
+                        android:textSize="@dimen/_15sdp" />
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_register"
